--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
-    <div id="toy-collection"></div>
+    <div id="toy-collection">
+      document.addEventListener("DOMContentLoaded", function() {
+        e.preventDefault();
+      });
+    </div>
   </body>
 </html>
