--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </p>
 
     <div id="toy-collection">
+      <script>
       document.addEventListener("DOMContentLoaded", function() {
         e.preventDefault();
       });
@@ -56,6 +57,7 @@
       i.innerHTML = object["image"];
       let p = document.createElement("p");
       p.innerHTML = object["likes"] + "Likes";
+    </script>
     </div>
   </body>
 </html>
