--- a/index.html
+++ b/index.html
@@ -45,19 +45,10 @@
     <p style="text-align:center">
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
-
+    
+    <div class="card">
+      </div>   
     <div id="toy-collection">
-      <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        e.preventDefault();
-      });
-      let h = document.createElement("h2");
-      h.innerHTML = object["name"];
-      let i = document.createElement("image");
-      i.innerHTML = object["image"];
-      let p = document.createElement("p");
-      p.innerHTML = object["likes"] + "Likes";
-    </script>
     </div>
   </body>
 </html>
